imgui/src/bindings/imgui_c.rs

/* automatically generated by rust-bindgen 0.72.0 */

unsafe extern "C" {
    pub fn init_glfw(arg1: *mut ::std::os::raw::c_void, arg2: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn terminate();
}
unsafe extern "C" {
    pub fn _show_demo_window(arg1: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn _show_style_editor();
}
unsafe extern "C" {
    pub fn _get_mouse_pos(arg1: *mut f32, arg2: *mut f32);
}
unsafe extern "C" {
    pub fn _is_window_hovered(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _is_window_focused(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _get_cursor_screen_pos(x: *mut f32, y: *mut f32);
}
unsafe extern "C" {
    pub fn _set_cursor_screen_pos(x: f32, y: f32);
}
unsafe extern "C" {
    pub fn _get_cursor_pos(x: *mut f32, y: *mut f32);
}
unsafe extern "C" {
    pub fn _set_cursor_pos(x: f32, y: f32);
}
unsafe extern "C" {
    pub fn new_frame(arg1: *const ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn end_frame();
}
unsafe extern "C" {
    pub fn render(arg1: *const ::std::os::raw::c_void, arg2: *const ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn create_context() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn set_current_context(arg1: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn get_current_context() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn _set_next_window_size(arg1: f32, arg2: f32, arg3: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn _get_window_size(arg1: *mut f32, arg2: *mut f32);
}
unsafe extern "C" {
    pub fn _get_content_region_avail(w: *mut f32, h: *mut f32);
}
unsafe extern "C" {
    pub fn _set_next_window_pos(
        arg1: f32,
        arg2: f32,
        arg3: ::std::os::raw::c_int,
        arg4: f32,
        arg5: f32,
    );
}
unsafe extern "C" {
    pub fn _get_window_pos(arg1: *mut f32, arg2: *mut f32);
}
unsafe extern "C" {
    pub fn set_next_window_focus();
}
unsafe extern "C" {
    pub fn set_window_focus();
}
unsafe extern "C" {
    pub fn set_next_item_width(width: f32);
}
unsafe extern "C" {
    pub fn align_text_to_frame_padding();
}
unsafe extern "C" {
    pub fn push_item_width(arg1: f32);
}
unsafe extern "C" {
    pub fn pop_item_width();
}
unsafe extern "C" {
    pub fn _begin(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end();
}
unsafe extern "C" {
    pub fn _begin_child(
        arg1: *const ::std::os::raw::c_char,
        arg2: f32,
        arg3: f32,
        arg4: ::std::os::raw::c_int,
        arg5: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_child();
}
unsafe extern "C" {
    pub fn _open_popup(arg1: *const ::std::os::raw::c_char, arg2: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn _begin_popup(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _begin_popup_modal(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_popup();
}
unsafe extern "C" {
    pub fn _collapsing_header(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _tree_node(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tree_pop();
}
unsafe extern "C" {
    pub fn _selectable(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
        arg4: f32,
        arg5: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _begin_tab_bar(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_tab_bar();
}
unsafe extern "C" {
    pub fn _begin_tab_item(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_tab_item();
}
unsafe extern "C" {
    pub fn _tab_item_button(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _columns(
        arg1: ::std::os::raw::c_int,
        arg2: *const ::std::os::raw::c_char,
        arg3: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn next_column();
}
unsafe extern "C" {
    pub fn _table_setup_column(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
        arg3: f32,
        arg4: ::std::os::raw::c_uint,
    );
}
unsafe extern "C" {
    pub fn table_headers_row();
}
unsafe extern "C" {
    pub fn _begin_table(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _table_next_row(arg1: ::std::os::raw::c_int, arg2: f32);
}
unsafe extern "C" {
    pub fn _table_next_column() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _table_set_column_index(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_table();
}
unsafe extern "C" {
    pub fn _text(arg1: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn _text_wrapped(arg1: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn _input_text(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_char,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_text_multi_line(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_char,
        arg3: ::std::os::raw::c_int,
        arg4: f32,
        arg5: f32,
        arg6: ::std::os::raw::c_int,
        arg7: *mut ::std::os::raw::c_void,
        arg8: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _text_colored(r: f32, g: f32, b: f32, a: f32, text: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn _image(
        arg1: *const ::std::os::raw::c_void,
        arg2: *const f32,
        arg3: *const f32,
        arg4: *const f32,
        arg5: *const f32,
        arg6: *const f32,
    );
}
unsafe extern "C" {
    pub fn _begin_main_menu_bar() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_main_menu_bar();
}
unsafe extern "C" {
    pub fn _begin_menu_bar() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_menu_bar();
}
unsafe extern "C" {
    pub fn _begin_menu(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn end_menu();
}
unsafe extern "C" {
    pub fn _menu_item(
        arg1: *const ::std::os::raw::c_char,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn separator();
}
unsafe extern "C" {
    pub fn _separator_text(arg1: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn _same_line(arg1: f32, arg2: f32);
}
unsafe extern "C" {
    pub fn _button(
        arg1: *const ::std::os::raw::c_char,
        arg2: f32,
        arg3: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _radio_button(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _small_button(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _list_box(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *const *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _combo(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *const *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
        arg5: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn push_id(arg1: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn pop_id();
}
unsafe extern "C" {
    pub fn _push_style_var(arg1: ::std::os::raw::c_int, arg2: f32, arg3: f32);
}
unsafe extern "C" {
    pub fn _pop_style_var(arg1: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn _get_style_var(arg1: ::std::os::raw::c_int, arg2: *mut f32, arg3: *mut f32);
}
unsafe extern "C" {
    pub fn _push_style_color(arg1: ::std::os::raw::c_int, arg2: *mut f32);
}
unsafe extern "C" {
    pub fn pop_style_color(arg1: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn _is_item_clicked(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _is_item_hovered(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_float_2(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut f32,
        arg3: *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_float_3(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut f32,
        arg3: *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_float_4(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut f32,
        arg3: *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _slider_float_2(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _slider_float_3(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _slider_float_4(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_float_2(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        speed: f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_float_3(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        speed: f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_float_4(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        speed: f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_int_2(
        label: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
        speed: f32,
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_int_3(
        label: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
        speed: f32,
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_int_4(
        label: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
        speed: f32,
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_float(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut f32,
        arg3: f32,
        arg4: f32,
        arg5: *const ::std::os::raw::c_char,
        arg6: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_float(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        speed: f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _drag_int(
        label: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
        speed: f32,
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _slider_float(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
        min: f32,
        max: f32,
        format: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_double(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut f64,
        arg3: f64,
        arg4: f64,
        arg5: *const ::std::os::raw::c_char,
        arg6: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _input_int(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
        arg5: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _checkbox(
        arg1: *const ::std::os::raw::c_char,
        arg2: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _color_edit_3(
        label: *const ::std::os::raw::c_char,
        col: *mut f32,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _color_edit_4(
        label: *const ::std::os::raw::c_char,
        col: *mut f32,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _color_picker_3(
        label: *const ::std::os::raw::c_char,
        col: *mut f32,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _color_picker_4(
        label: *const ::std::os::raw::c_char,
        col: *mut f32,
        flags: ::std::os::raw::c_int,
        ref_col: *const f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn frame_rate() -> f32;
}
